--- a/css/css.css
+++ b/css/css.css
@@ -41,7 +41,11 @@
     float: left;
     margin-left: 1%;
 }
-
+/* table {
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
+} */
 tr td {
     text-align: right;
     width: 150px;
